Sun Jan 30 16:15:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_dl2.rb (TestDL#test_sin): math functions do not
	  work on x86_64 due to the design of DL2.

	* test/dl/test_func.rb (DL::TestFunc#test_{sinf,sin): ditto.

Sun Jan 30 15:13:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/emacs_mule.c (emacsmule_islead): 7bit range is also leading
	  byte.

Sun Jan 30 12:53:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/emacs_mule.c (emacsmule_islead): fix inverse condition.

Sun Jan 30 08:02:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Mac OS X wrongly reports it has fdatasync(3).

Fri Feb 18 19:31:31 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::remove_entry_secure): there is a
	  race condition in the case where the given path is a directory,
	  and some other user can move that directory, and create a
	  symlink while this method is executing.
	  Reported by: Nicholas Jefferson <nicholas at pythonic.com.au>

Sat Jan 29 22:16:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_join): [].join.encoding must be US-ASCII.
	  [ruby-list:47790]

Fri Jan 28 12:05:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Add #include<sys/stat.h> when struct stat is
	  tested. Otherwise, incomplete type dereference error will occur.

Fri Jan 28 02:37:18 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* re.c (rb_reg_raise): add GC guard to prevent intermediate
	  variable from GC.

Fri Jan 28 02:35:41 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* hash.c (rb_hash_fetch_m): add GC guard to prevent intermediate
	  variable from GC.

Wed Jan 26 22:57:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* class.c (clone_method): add GC guard to prevent intermediate
	  variable from GC. [Bug #4321] [ruby-dev:43107]

Wed Jan 26 22:28:49 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_eval.c (rb_throw_obj): add GC guard to prevent intermediate